# 3DGSflow

./: .gitignore  .gitmodules  pyproject.toml  workflow.html  workflow_server.py
src/gs_manager/: cli.py  config.py  ffmpeg.py  folders.py  models.py
src/gs_manager/converters/: rs_to_colmap.py  xml_spherical_to_perspective.py  xml_to_colmap.py  xml_to_csv.py  xml_to_xmp.py
tools/: diagnose_rotation.py  filter_blurry.py
